# roma_cnn_count

./: .gitignore  1  11  CMakeLists.txt  README.md  package.xml  setup.py
inData/devkit/csv/: 99_9_8.csv
inData/files/: counting_test.csv  counting_train.csv
launch/: .agent_cnn.launch.swp  agent_cnn.launch  agent_cnn_gpu_sim.launch  swarm_agents_1_cnn.launch  swarm_agents_3_cnn.launch
src/: README.md  SCOUNT_node.py  cnn comments  configs (copy).py  configs.py  packageTest.py  sensor_abstract  train_SCOUNT.py  util.py
src/dataset/: fruit_count_dataset.py
src/engines/: PAC_Engine.py  SCOUNT_Engine.py
src/models/: PAC.py  SCOUNT.py
src/models/log/: events.out.tfevents.1620234479.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620234512.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620235253.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620235387.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620235460.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620235614.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620235813.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620236036.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620296701.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620303538.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620303625.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1620303898.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621435753.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621435795.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621435876.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621516500.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621516570.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621516901.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621517117.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621517126.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621517232.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621517547.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621517789.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621518928.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621519001.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621519881.cscarbone-Strix-GL704GV-GL704GV  events.out.tfevents.1621519927.cscarbone-Strix-GL704GV-GL704GV  (+64 more)
src/roma_cnn_count/: configs (another copy).py  configs.py  confusion.py  test_SCOUNT.py  train_SCOUNT.py  train_WSCOUNT.py
src/roma_cnn_count/dataset/: fruit_count_dataset.py
src/roma_confident_scount_ros/: configs.py  test_SCOUNT.py
(+88 files in other folders)
