<?xml version="1.0"?>
<package format="2">
  <name>roma_agroSwarm_cnn_confidenceCounting</name>
  <version>0.0.1</version>
  <description>ROS node to control drones</description>

  <maintainer email="carbone@diag.uniroma1.it">Carlos Carbone</maintainer>
  <author>Carlos Carbone</author>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>

  <depend>roma_agroSwarm_quadAI</depend>
  
  <export>

  </export>

</package>
